Updates to create spring-security2-oauth2 jar
spring-oauth2-tests-common fail which causes rest of build to be skipped.